# RumorFlow

./: CMakeLists.txt  README.md  extract.py  grid_search.py  main.cpp
code/: CMakeLists.txt  cec17.c  cec17_test_func.c
common/: mh.h  solution.h
datos/: seeds.txt
datos/latexTables/: dataToTables.py  generated_tables.aux  generated_tables.fdb_latexmk  generated_tables.fls  generated_tables.tex
inc/: RF.h  RFGroups.h  population.h  problem.h
latex/: RumorFlow.aux  RumorFlow.dvi  RumorFlow.fdb_latexmk  RumorFlow.fls  RumorFlow.tex  RumorFlow.toc
src/: RF.cpp  RFGroups.cpp  population.cpp  problem.cpp
